[FIX][UI] No need to have duplicate light and dark selectors in... --- * Update _variables.scss
* [FIX][UI] Fix bad color contrast of hamburger icons in FiveAlive theme's top and topbar navbars, which are dark even when admin navbar option is light.

* [FIX][UI] No need to have duplicate light and dark selectors in tiki-pagetop_colors.scss - color variations are specified with one set of selectors, in _css-variables.scss.

See merge request tikiwiki/tiki!6199

--- a/themes/fivealive/options/watermelon/scss/_variables.scss
+++ b/themes/fivealive/options/watermelon/scss/_variables.scss
@@ -244,6 +244,10 @@ $postbody-title-card-title-color: #fff;
     --tiki-top-text-color: #{$navbar-light-link-hover-color};
     --tiki-top-border: solid #152304;
     --tiki-top-border-color: #152304;
+    // When navbar-light is actually dark, lighten the hamburger icon color ('stroke' in the svg) for contrast.
+    .navbar-light {
+        --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+    }
 }
 
 @mixin topbar-nav-light {
@@ -251,6 +255,10 @@ $postbody-title-card-title-color: #fff;
     --tiki-topbar-color: #{$navbar-light-link-color}; // #{$topbar-light-color};
     --tiki-topbar-hover-color: #{$navbar-dark-link-hover-color};
     --tiki-topbar-text-color: #{$navbar-dark-link-hover-color};
+    // When navbar-light is actually dark, lighten the hamburger icon color ('stroke' in the svg) for contrast.
+    .navbar-light {
+        --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+    }
 }
 
 @mixin top-nav-dark {
