[FIX][UI] Fixed admin navbar and aside color regressions and related issues. --- * [FIX][UI] Fixed admin navbar and aside color regressions and related issues. --- * [FIX][UI] Fixed admin navbar and aside color regressions and related issues.
See merge request tikiwiki/tiki!6273


(cherry picked from commit 029b1b74d5a75cc2605bbe5c58ee2f47890be6f7)

e996a4f5 [FIX][UI] Fixed admin navbar and aside color regressions and related issues.

Co-authored-by: Gary Cunningham-Lee <gary_c@cunningham-lee.com>

See merge request tikiwiki/tiki!6274

--- a/themes/base_files/css/feature/adminui.scss
+++ b/themes/base_files/css/feature/adminui.scss
@@ -87,11 +87,15 @@ body.tiki-admin {
 // has been offset by removing rules not involving color where color classes were unnecessarily used repeatedly, one for light and one for dark.
 
 // Top nav light ------------------------------------------ Fixed-top position, light (background) option
-//.tiki-admin .tiki-top-nav-light,  <-- These are now set by each theme's _css-variables.scss file, which they were competing with for priorty.
-//.tiki-admin .top_modules.navbar-light-parent,
-//.tiki-admin .navbar-light-parent .top_modules {
-//    background: var(--tiki-admin-top-nav-bg);
-//}
+.tiki-admin header .tiki-top-nav-light,
+//.tiki-admin .top_modules.navbar-light-parent, // These selectors don't seem to be necessary - g_c-l.
+//.tiki-admin .navbar-light-parent .top_modules
+{
+    background: var(--tiki-admin-top-nav-bg);
+    border: var(--tiki-admin-top-border); // Style and color, for example, solid black
+    border-width: var(--tiki-admin-top-border-width); // For example, 1px, or 0px 0px 4px 0px
+    box-shadow: var(--tiki-admin-top-box-shadow);
+}
 
 // Top links
 .tiki-admin .tiki-admin-top-nav-light .nav-item .nav-link { // Scope widened to include accordion.
@@ -120,11 +124,15 @@ body.tiki-admin {
 }
 
 // Top nav dark ------------------------------------------ Fixed-top position, dark (background) option
-//.tiki.tiki-admin .tiki-top-nav-dark,  <-- These are now set by each theme's _css-variables.scss file, which they were competing with for priorty.
-//.tiki.tiki-admin .top_modules.navbar-dark-parent,
-//.tiki.tiki-admin .navbar-dark-parent .top_modules {
-//    background: var(--tiki-admin-top-nav-bg);
-//}
+.tiki.tiki-admin .tiki-top-nav-dark,
+//.tiki.tiki-admin .top_modules.navbar-dark-parent, // These selectors don't seem to be necessary - g_c-l.
+//.tiki.tiki-admin .navbar-dark-parent .top_modules
+{
+    background: var(--tiki-admin-top-nav-bg);
+    border: var(--tiki-admin-top-border); // Style and color, for example, solid black
+    border-width: var(--tiki-admin-top-border-width); // For example, 1px, or 0px 0px 4px 0px
+    box-shadow: var(--tiki-admin-top-box-shadow);
+}
 
 // Top links
 .tiki-admin .tiki-admin-top-nav-dark .nav-item .nav-link { // Scope widened to include accordion.
@@ -1008,6 +1016,7 @@ body.tiki-admin {
 .tiki-admin .admin-content nav.admin-navbar {
     background-color: transparent !important;
     background-image: none !important;
+    border: none;
     position: fixed;
     left: 0;
     padding-left: 7rem;
