--- a/themes/base_files/scss/_tiki-pagetop_colors.scss
+++ b/themes/base_files/scss/_tiki-pagetop_colors.scss
@@ -15,8 +15,8 @@
 //.tiki-admin .top_modules.navbar-light-parent,
 //.layout_social header.navbar-light-parent.bg-light-parent,             // Classic Bootstrap layout (fixed-top navbar) -- Complete header
 //.layout_social header.navbar.navbar-light.bg-light                     // Classic Bootstrap layout -- Menu itself
-.tiki .tiki-top-nav-light,
-.tiki .tiki-top-nav-dark
+body:not(.tiki-admin) .tiki-top-nav-light,
+body:not(.tiki-admin) .tiki-top-nav-dark
 {
     background: var(--tiki-top-bg);
     color: var(--tiki-top-text-color); // Turns out it's necessary to provide a variable for this. Previously written: The idea for this was text, etc. that isn't a link, but probably anything in these nav zones that isn't a link will have its own CSS rules already.
