--- a/themes/jqui/scss/_css-variables.scss
+++ b/themes/jqui/scss/_css-variables.scss
@@ -1,4 +1,5 @@
-// Tiki CSS variables / custom properties
+   // Tiki CSS variables / custom properties
+@import "variables";
 
 // Used for L&F nav color choice and color mode override
 @mixin top-nav-dark {
@@ -91,8 +92,8 @@
 
 // Dark navbar
 @mixin admin-nav-dark {
-    --tiki-admin-top-nav-bg: linear-gradient(to bottom, #e3e3e3 0%, #cccccc 100%);
-    --tiki-admin-top-nav-color: #{$navbar-dark-color};
+    --tiki-admin-top-nav-bg: var(--tiki-top-bg); //linear-gradient(to bottom, #e3e3e3 0%, #cccccc 100%);
+    --tiki-admin-top-nav-color: black; // #{$navbar-dark-color};
     --tiki-admin-top-nav-hover-color: #{$navbar-dark-color};
     --tiki-admin-top-nav-hover-bg: #{$navbar-dark-hover-color};
     --tiki-admin-aside-nav-bg: linear-gradient(to bottom, #e3e3e3 0%, #cccccc 100%);
