--- a/themes/materia/scss/_css-variables.scss
+++ b/themes/materia/scss/_css-variables.scss
@@ -62,15 +62,15 @@
     }
 }
 
-// Color mode preference trumps L&F admin dark navbar option
-[data-bs-theme=light] {                              // color mode
-    .tiki-top-nav-dark {                           // dark top selector
-        @include top-nav-light;                      // light values
-    }
-    .tiki-topbar-nav-dark {
-        @include topbar-nav-light;
-    }
-}
+// Color mode preference trumps L&F admin dark navbar option - Commented out as this isn't used in this theme
+//[data-bs-theme=light] {                              // color mode
+//    .tiki-top-nav-dark {                           // dark top selector
+//        @include top-nav-light;                      // light values
+//    }
+//    .tiki-topbar-nav-dark {
+//        @include topbar-nav-light;
+//    }
+//}
 
 // - - - - - New admin pages (Unified Admin Backend) - - - - - - - //
 
@@ -82,6 +82,8 @@
      --tiki-admin-top-nav-hover-color: rgba(0, 0, 0, 0.7);
     --tiki-admin-top-nav-hover-bg: none ;
     --tiki-admin-aside-nav-bg: rgba(248, 249, 250, 1);
+    --tiki-admin-top-border: solid rgba(0, 0, 0, 0.3);
+    --tiki-admin-top-border-width: 2px;
     --tiki-admin-aside-nav-color: var(--tiki-admin-top-nav-color);
     --tiki-admin-aside-nav-hover-color: var(--tiki-admin-top-nav-hover-color);
     --tiki-admin-dropdown-bg: #{$dropdown-bg};
