--- a/themes/slate/scss/_css-variables.scss
+++ b/themes/slate/scss/_css-variables.scss
@@ -43,11 +43,11 @@
 }
 
 .tiki-top-nav-light {
-    @include top-nav-dark;
+    @include top-nav-light;
 }
 
 .tiki-topbar-nav-light {
-    @include topbar-nav-dark;
+    @include topbar-nav-light;
 }
 
 .tiki-top-nav-dark {
@@ -86,7 +86,7 @@
 // - - - - - New admin pages (Unified Admin Backend) - - - - - - - //
 // These mixins have the same content - Todo: refactor
 @mixin admin-nav-light {
-    --tiki-admin-top-nav-bg: linear-gradient(#25282c, #292c30 40%, #2b2f32);
+    --tiki-admin-top-nav-bg: rgb(233, 236, 239); // linear-gradient(#25282c, #292c30 40%, #2b2f32);
     --tiki-admin-top-nav-color: rgba(255, 255, 255, 0.55);
     --tiki-admin-top-nav-hover-color: #fff;
     --tiki-admin-top-nav-hover-bg: linear-gradient(#25282c, #292c30 40%, #2b2f32);
