--- a/themes/solar/scss/_css-variables.scss
+++ b/themes/solar/scss/_css-variables.scss
@@ -5,7 +5,7 @@
 
 //--------------------------- Tiki CSS variables
 @mixin top-nav-light {
-    --tiki-top-bg: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)); // rgb(255, 255, 255);
+    --tiki-top-bg: rgba(var(--bs-light-rgb), 1); // rgb(255, 255, 255);
     --tiki-top-color: rgba(0, 0, 0, 0.55);
     --tiki-top-hover-color: rgba(0, 0, 0, 0.7);
     --tiki-top-text-color: rgba(0, 0, 0, 0.7);
@@ -90,11 +90,11 @@
 
 // Light navbar minus top nav
 @mixin admin-nav-light {
-    --tiki-admin-top-nav-bg: rgba(7, 54, 66, 1);
-    --tiki-admin-top-nav-color: #fff;
-    --tiki-admin-top-nav-hover-color: #fff;
+    --tiki-admin-top-nav-bg: rgba(var(--bs-light-rgb), 1); // rgba(7, 54, 66, 1);
+    --tiki-admin-top-nav-color: var(--tiki-top-color); // #fff;
+    --tiki-admin-top-nav-hover-color: var(--tiki-top-color); // #fff;
     //    --tiki-admin-top-nav-hover-bg: #{$navbar-dark-hover-color};
-    --tiki-admin-aside-nav-bg: rgba(7, 54, 66, 1);
+    --tiki-admin-aside-nav-bg: rgba(var(--bs-light-rgb), 1);; // rgba(7, 54, 66, 1);
     --tiki-admin-aside-nav-color: var(--tiki-admin-top-nav-color);
     --tiki-admin-aside-nav-hover-color: var(--tiki-admin-top-nav-hover-color);
     --tiki-admin-dropdown-link-color: #{$dropdown-dark-link-color};
@@ -155,13 +155,13 @@
     }
 }
 // Color mode preference trumps L&F admin dark navbar option
-[data-bs-theme=light] {                              // light color mode
-    .tiki .tiki-admin-top-nav-dark,
-    .tiki.tiki-admin .navbar-dark-parent.tiki-top-nav-dark, // UAB - Specificity increased to override
-    .tiki .tiki-admin-aside-nav-dark {                // dark top selectors
-        @include admin-nav-dark;                      // dark values
-    }
-}
+//[data-bs-theme=light] {                              // light color mode
+//    .tiki .tiki-admin-top-nav-dark,
+//    .tiki.tiki-admin .navbar-dark-parent.tiki-top-nav-dark, // UAB - Specificity increased to override
+//    .tiki .tiki-admin-aside-nav-dark {                // dark top selectors
+//        @include admin-nav-dark;                      // dark values
+//    }
+//}
 
 // - - - - - New admin pages (Unified Admin Backend) END - - - - - - - //
 
