--- a/themes/lux/scss/_css-variables.scss
+++ b/themes/lux/scss/_css-variables.scss
@@ -81,6 +81,8 @@
     --tiki-admin-top-nav-color: rgba(0, 0, 0, 0.76);
     --tiki-admin-top-nav-hover-color: #1a1a1a;
     --tiki-admin-top-nav-hover-bg: none ;
+    --tiki-admin-top-border: solid rgba(0, 0, 0, 0.1);
+    --tiki-admin-top-border-width: 1px;
     --tiki-admin-aside-nav-bg: rgba(255, 255, 255, 1);
     --tiki-admin-aside-nav-color: var(--tiki-admin-top-nav-color);
     --tiki-admin-aside-nav-hover-color: var(--tiki-admin-top-nav-hover-color);
