--- a/themes/simplex/scss/_css-variables.scss
+++ b/themes/simplex/scss/_css-variables.scss
@@ -87,6 +87,8 @@
     --tiki-admin-top-nav-color: rgba(0, 0, 0, 0.55); // rgba(0, 0, 0, 0.9);
     --tiki-admin-top-nav-hover-color: rgba(0, 0, 0, 0.7);
     --tiki-admin-top-nav-hover-bg: none ;
+    --tiki-admin-top-border: solid #dedede;
+    --tiki-admin-top-border-width: 1px;
     --tiki-admin-aside-nav-bg: rgb(255, 255, 255);
     --tiki-admin-aside-nav-color: var(--tiki-admin-top-nav-color);
     --tiki-admin-aside-nav-hover-color: var(--tiki-admin-top-nav-hover-color);
