--- a/themes/sketchy/scss/_css-variables.scss
+++ b/themes/sketchy/scss/_css-variables.scss
@@ -82,6 +82,8 @@
     --tiki-admin-top-nav-color: rgba(0, 0, 0, 0.9);
     --tiki-admin-top-nav-hover-color: rgba(0, 0, 0, 0.7);
     --tiki-admin-top-nav-hover-bg: none ;
+    --tiki-admin-top-border: solid #333;
+    --tiki-admin-top-border-width: 2px;
     --tiki-admin-aside-nav-bg: rgb(255, 255, 255);
     --tiki-admin-aside-nav-color: var(--tiki-admin-top-nav-color);
     --tiki-admin-aside-nav-hover-color: var(--tiki-admin-top-nav-hover-color);
@@ -93,6 +95,14 @@
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
+}
+
+.tiki.tiki-admin header .navbar-light-parent.tiki-top-nav-light {
+    border-radius: 25px 25px 55px 5px / 5px 55px 25px 25px;
+}
+
+.navbar-expand-md.navbar-light.bg-light.tiki-topbar-nav-light.tiki-admin-top-nav-light.admin-navbar {
+    border: none;
 }
 
 // Dark navbar minus top nav
