--- a/themes/thenews/scss/_css-variables.scss
+++ b/themes/thenews/scss/_css-variables.scss
@@ -121,6 +121,9 @@
     .accordion-button::after {
         background-image:  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23669fcc'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
     }
+    .accordion-item .nav-pills .nav-link {
+        color: var(--tiki-admin-top-nav-color) !important;
+    }
 }
 
 // When color mode switch isn't active
